--- a/03_OCP_Frontend/angular.json
+++ b/03_OCP_Frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "wow-logistica": {
+    "rpdlogistica": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/wow-logistica",
+            "outputPath": "dist/rpdlogistica",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -81,10 +81,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "wow-logistica:build:production"
+              "browserTarget": "rpdlogistica:build:production"
             },
             "development": {
-              "browserTarget": "wow-logistica:build:development"
+              "browserTarget": "rpdlogistica:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -92,7 +92,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "wow-logistica:build"
+            "browserTarget": "rpdlogistica:build"
           }
         },
         "test": {
@@ -117,5 +117,5 @@
       }
     }
   },
-  "defaultProject": "wow-logistica"
+  "defaultProject": "rpdlogistica"
 }
