--- a/03_OCP_Frontend/Dockerfile
+++ b/03_OCP_Frontend/Dockerfile
@@ -5,6 +5,7 @@ COPY package.json package-lock.json ./
 RUN npm install
 COPY . .
 RUN npm run build
+RUN cat ./src/environments/environment.ts
 
 FROM nginx:stable
 
