--- a/03_OCP_Frontend/package.json
+++ b/03_OCP_Frontend/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "buildnoconfig": "ng build",
     "config": "ts-node ./src/scripts/setenv.ts",
-    "build": "npm run config --environment=dev && ng build",
+    "build": "npm run config --environment=prod && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
